--- a/both/i18n/en-us.i18n.yml
+++ b/both/i18n/en-us.i18n.yml
@@ -19,7 +19,7 @@ common:
     hash: 'Hash'
     more: 'More'
     fullStop: '.'
-    searchPlaceholder: 'Search with tx hash / block height / address'
+    searchPlaceholder: 'Search with block height / address'
     cancel: 'Cancel'
     retry: 'Retry'
     rewards: 'Rewards'
